kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nuxt-demo-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: nuxt-demo-ip
  labels:
    app: nuxt-demo
spec:
  backend:
    serviceName: nuxt-demo-backend
    servicePort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nuxt-demo-backend
  labels:
    app: nuxt-demo
spec:
  type: NodePort
  selector:
    app: nuxt-demo
  ports:
  - port: 3000
    targetPort: 3000
